# learningProtobuf

./: CMakeLists.txt  README.md  doc.md
include/: addressbook.proto
reader/: CMakeLists.txt
writer/: CMakeLists.txt
